feat(caching): implemented caching with redis